src/keycloak_init/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: ${THIS_NAMESPACE}
  annotations:
    cert-manager.io/cluster-issuer: mkcert-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: nginx
    #traefik.ingress.kubernetes.io/router.middlewares: example-redirect-https@kubernetescrd
    #cert-manager.io/cluster-issuer: letsencrypt-production
    #spec.ingressClassName: traefik
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${THIS_KEYCLOAK_HOST}.${THIS_DOMAIN}
  rules:
    - host: ${THIS_KEYCLOAK_HOST}.${THIS_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
